fix: remove tap highlight and spacing fix

--- a/src/styles/tokens/semantics/_spacing.scss
+++ b/src/styles/tokens/semantics/_spacing.scss
@@ -1,4 +1,5 @@
 @use "../primitives" as *;
+@use "./breakpoint" as *;
 
 :root {
   // Positive spacing variables
@@ -38,5 +39,9 @@
   --s-neg-spacing-15: -#{$p-spacing-15};
 
   // semantics
-  --s-spacing-app-horizontal: var(--s-spacing-10);
+  --s-spacing-app-horizontal: var(--s-spacing-6);
+
+  @include screen-md {
+    --s-spacing-app-horizontal: var(--s-spacing-10);
+  }
 }
